# capa-dynamic-argument-matching-prototype

./: README.md  demo.py  pyproject.toml
rules/: createfile_temp.yml
src/capa_dynamic_argument_matching/: __init__.py  extractors.py  features.py  matcher.py  normalization.py
src/capa_dynamic_argument_matching_prototype.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_features.py  test_matching_demo.py  test_normalization.py  test_parser.py
